# graph-rag-simpsons

./: .gitignore  README.md  basic_eda.ipynb  config.yaml  graph_eda.ipynb  graph_rag.ipynb  pyproject.toml
graph_rag/: graph_eda.ipynb  graph_rag.ipynb  prompts.py
limited_output/: faiss_index_bge_m3.index
limited_output/embeddings/: embeddings_bge_m3.npz
output/: skipped_episodes.json
output/embeddings_batches/: embeddings_batch_0.npy  embeddings_batch_1000.npy  embeddings_batch_10000.npy  embeddings_batch_10500.npy  embeddings_batch_11000.npy  embeddings_batch_11500.npy  embeddings_batch_12000.npy  embeddings_batch_12500.npy  embeddings_batch_13000.npy  embeddings_batch_13500.npy  embeddings_batch_14000.npy  embeddings_batch_14500.npy  embeddings_batch_1500.npy  embeddings_batch_2000.npy  embeddings_batch_2500.npy  embeddings_batch_3000.npy  embeddings_batch_3500.npy  embeddings_batch_4000.npy  embeddings_batch_4500.npy  embeddings_batch_500.npy  embeddings_batch_5000.npy  embeddings_batch_5500.npy  embeddings_batch_6000.npy  embeddings_batch_6500.npy  embeddings_batch_7000.npy  embeddings_batch_7500.npy  embeddings_batch_8000.npy  embeddings_batch_8500.npy  embeddings_batch_9000.npy  embeddings_batch_9500.npy
output/scripts/: season_10_episode_204_text.txt  season_10_episode_205_text.txt  season_10_episode_206_text.txt  season_10_episode_207_text.txt  season_10_episode_208_text.txt  season_10_episode_209_text.txt  season_10_episode_210_text.txt  season_10_episode_211_text.txt  (+556 more)
rag/: rag.ipynb  rag_limited.ipynb  rag_openai.ipynb  rag_opensource.ipynb
