[project]
name = "graph-rag-simpsons"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "future==1.0.0",
    "graspologic==3.3.0",
    "ipykernel==6.29.5",
    "jupyter==1.1.1",
    "jupyterlab==4.4.3",
    "llama-index==0.12.45",
    "llama-index-embeddings-ollama==0.6.0",
    "llama-index-graph-stores-neo4j==0.4.6",
    "llama-index-llms-ollama==0.6.2",
    "llvmlite==0.44.0",
    "neo4j==5.28.1",
    "numpy==1.24.4",
    "ollama==0.5.1",
    "pandas>=2.3.0",
    "pyyaml==6.0.2",
    "scipy==1.12.0",
]
